--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               />
               <div class="overlay">QuickView</div>
               <p>
-                <a href="productPage.htmlroductPage.html">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
