--- a/productList.html
+++ b/productList.html
@@ -90,9 +90,9 @@
               <li>
                 <a href="#">Pages ▾</a>
                 <ul class="dropdown">
-                  <li><a href="#">Page 1</a></li>
-                  <li><a href="#">Page 2</a></li>
-                  <li><a href="#">Page 3</a></li>
+                  <li><a href="index.html">Page 1</a></li>
+                  <li><a href="productPage.html">Page 2</a></li>
+                  <li><a href="productList.html">Page 3</a></li>
                 </ul>
               </li>
               <li>
