--- a/productPage.html
+++ b/productPage.html
@@ -65,7 +65,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="index.html"
               ><img src="./Images/Logo2.png" style="height: 25px"
             /></a>
           </div>
@@ -91,9 +91,9 @@
               <li>
                 <a href="#">Pages ▾</a>
                 <ul class="dropdown">
-                  <li><a href="#">Page 1</a></li>
-                  <li><a href="#">Page 2</a></li>
-                  <li><a href="#">Page 3</a></li>
+                  <li><a href="index.html">Page 1</a></li>
+                  <li><a href="productPage.html">Page 2</a></li>
+                  <li><a href="productList.html">Page 3</a></li>
                 </ul>
               </li>
               <li>
