--- a/productPage.html
+++ b/productPage.html
@@ -117,7 +117,7 @@
       <div class="Product container">
         <div class="product-details">
           <div class="product-zoom">
-            <span class='zoom' id='ex1'> <img src='./Images/Product-1.jpg' id='jack' width='400' height='520' alt='Daisy on the Ohoopee'/>
+            <span class='zoom' id='ex1'> <img src='./Images/Product-1.jpg' id='jack' width='320' height='400' alt='Daisy on the Ohoopee'/>
           </div>
           <div class="product-spec">
             <div class="product-title">
@@ -125,10 +125,10 @@
               <div>
                 <a href="#"
                   ><i class="fas fa-angle-left" style="font-size: 24px"></i
-                ></a>
+                ><span class="tooltiptext"><img src="./Images/handbag01.jpg" width="70px" height="auto" /></span></a>
                 <a href="#"
                   ><i class="fas fa-angle-right" style="font-size: 24px"></i
-                ></a>
+                ><span class="tooltiptext"><img src="./Images/handbag02.jpg" width="70px" height="auto" /></span></a>
               </div>
             </div>
             <div class="rating">
