--- a/index.html
+++ b/index.html
@@ -267,11 +267,7 @@
             <div class="HR"></div>
           </div>
           <div class="card" id="item-1">
-            <img
-              src="./Images/product-01.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-01.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
@@ -294,11 +290,7 @@
             </div>
           </div>
           <div class="card" id="item-2">
-            <img
-              src="./Images/product-02.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-02.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
@@ -321,11 +313,7 @@
             </div>
           </div>
           <div class="card" id="item-3">
-            <img
-              src="./Images/product-03.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-03.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
@@ -348,11 +336,7 @@
             </div>
           </div>
           <div class="card" id="item-4">
-            <img
-              src="./Images/product-04.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-04.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
@@ -375,11 +359,7 @@
             </div>
           </div>
           <div class="card" id="item-5">
-            <img
-              src="./Images/product-05.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-05.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
@@ -402,11 +382,7 @@
             </div>
           </div>
           <div class="card" id="item-6">
-            <img
-              src="./Images/product-06.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-06.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
@@ -429,11 +405,7 @@
             </div>
           </div>
           <div class="card" id="item-7">
-            <img
-              src="./Images/product-07.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-07.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
@@ -456,11 +428,7 @@
             </div>
           </div>
           <div class="card" id="item-8">
-            <img
-              src="./Images/product-08.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/product-08.jpg" alt="model" />
             <div class="overlay">QuickView</div>
             <p>
               <a href="productPage.html">Women Black Top</a>
