--- a/productList.html
+++ b/productList.html
@@ -193,11 +193,7 @@
             </div>
           </div>
           <div class="card" id="item-1">
-            <img
-              src="./Images/New12.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/New12.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -223,11 +219,7 @@
             </div>
           </div>
           <div class="card" id="item-2">
-            <img
-              src="./Images/New11.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/New11.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -253,11 +245,7 @@
             </div>
           </div>
           <div class="card" id="item-3">
-            <img
-              src="./Images/New09.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/New09.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -283,11 +271,7 @@
             </div>
           </div>
           <div class="card" id="item-4">
-            <img
-              src="./Images/New08.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/New08.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -313,11 +297,7 @@
             </div>
           </div>
           <div class="card" id="item-5">
-            <img
-              src="./Images/handbag01.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/handbag01.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -343,11 +323,7 @@
             </div>
           </div>
           <div class="card" id="item-6">
-            <img
-              src="./Images/handbag02.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/handbag02.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -373,11 +349,7 @@
             </div>
           </div>
           <div class="card" id="item-7">
-            <img
-              src="./Images/handbag03.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/handbag03.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -403,11 +375,7 @@
             </div>
           </div>
           <div class="card" id="item-8">
-            <img
-              src="./Images/handbag04.jpg"
-              style="width: 200px; height: auto"
-              alt="model"
-            />
+            <img src="./Images/handbag04.jpg" alt="model" />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
