--- a/productPage.html
+++ b/productPage.html
@@ -117,7 +117,7 @@
       <div class="Product container">
         <div class="product-details">
           <div class="product-zoom">
-            <span class='zoom' id='ex1'> <img src='./Images/Product-1.jpg' id='jack' width='320' height='400' alt='Daisy on the Ohoopee'/>
+            <span class='zoom' id='ex1'> <img src='./Images/Product-1.jpg' id='jack'alt='Daisy on the Ohoopee'/>
           </div>
           <div class="product-spec">
             <div class="product-title">
