--- a/productPage.html
+++ b/productPage.html
@@ -66,7 +66,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html"
-              ><img src="./Images/Logo2.png" style="height: 25px"
+              ><img src="./Images/Logo2.png"
             /></a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
