--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <li><a href="#">Buy Porto!</a></li>
             </ul>
             <a href="#" class="notification">
-              <i class="fa fa-shopping-bag" style="font-size: 25px"></i>
+              <i class="fa fa-shopping-bag"></i>
               <span class="badge badge-pill badge-danger">0</span>
             </a>
           </div>
