--- a/productList.html
+++ b/productList.html
@@ -193,7 +193,12 @@
             </div>
           </div>
           <div class="card" id="item-1">
-            <img src="./Images/New12.jpg" alt="model" />
+            <img
+              src="./Images/New12.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -219,7 +224,12 @@
             </div>
           </div>
           <div class="card" id="item-2">
-            <img src="./Images/New11.jpg" alt="model" />
+            <img
+              src="./Images/New11.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -245,7 +255,12 @@
             </div>
           </div>
           <div class="card" id="item-3">
-            <img src="./Images/New09.jpg" alt="model" />
+            <img
+              src="./Images/New09.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -271,7 +286,12 @@
             </div>
           </div>
           <div class="card" id="item-4">
-            <img src="./Images/New08.jpg" alt="model" />
+            <img
+              src="./Images/New08.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -297,7 +317,12 @@
             </div>
           </div>
           <div class="card" id="item-5">
-            <img src="./Images/handbag01.jpg" alt="model" />
+            <img
+              src="./Images/handbag01.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -323,7 +348,12 @@
             </div>
           </div>
           <div class="card" id="item-6">
-            <img src="./Images/handbag02.jpg" alt="model" />
+            <img
+              src="./Images/handbag02.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -349,7 +379,12 @@
             </div>
           </div>
           <div class="card" id="item-7">
-            <img src="./Images/handbag03.jpg" alt="model" />
+            <img
+              src="./Images/handbag03.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
@@ -375,7 +410,12 @@
             </div>
           </div>
           <div class="card" id="item-8">
-            <img src="./Images/handbag04.jpg" alt="model" />
+            <img
+              src="./Images/handbag04.jpg"
+              alt="model"
+              width="200"
+              height="200"
+            />
             <p>
               <a href="productPage.html">Women Black Top</a>
               <span class="rating">
