--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </head>
   <body>
     <div class="home">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <nav class="navbar navbar-inverse navbar-fixed-top Navigation">
         <div class="container">
           <div class="navbar-header">
             <button
@@ -945,7 +945,7 @@
               <h5>NewsLetter</h5>
               <div>
                 <input type="search" required />
-                <button>Subscribe</button>
+                <button type="submit">Subscribe</button>
               </div>
             </div>
             <div id="payment">
