--- a/productList.html
+++ b/productList.html
@@ -50,7 +50,7 @@
   </head>
   <body>
     <div class="main">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <nav class="navbar navbar-inverse navbar-fixed-top Navigation">
         <div class="container">
           <div class="navbar-header">
             <button
@@ -63,7 +63,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"
+            <a class="navbar-brand" href="#"
               ><img src="./Images/Logo2.png" style="height: 25px"
             /></a>
           </div>
@@ -106,7 +106,7 @@
               <li><a href="#">Buy Porto!</a></li>
             </ul>
             <a href="#" class="notification">
-              <i class="fa fa-shopping-bag" style="font-size: 25px"></i>
+              <i class="fa fa-shopping-bag"></i>
               <span class="badge badge-pill badge-danger">0</span>
             </a>
           </div>
