--- a/productList2.html
+++ b/productList2.html
@@ -51,7 +51,7 @@
   </head>
   <body>
     <div class="main">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <nav class="navbar navbar-inverse navbar-fixed-top Navigation">
         <div class="container">
           <div class="navbar-header">
             <button
