--- a/productList2.html
+++ b/productList2.html
@@ -33,12 +33,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <!--Google Fonts-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Secular One"
-      rel="stylesheet"
-    />
-
     <!--Fontawesome icons plugin-->
     <link
       rel="stylesheet"
@@ -65,7 +59,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html"
-              ><img src="./Images/Logo2.png" style="height: 25px"
+              ><img src="./Images/Logo2.png" style="height: 25px" alt="logo"
             /></a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
