--- a/index.html
+++ b/index.html
@@ -452,11 +452,11 @@
           <div class="HR"></div>
         </div>
         <div class="owl-carousel container" id="carousel">
-          <div><img src="./Images/Brand01.jpg" /></div>
-          <div><img src="./Images/Brand02.jpg" /></div>
-          <div><img src="./Images/Brand03.jpg" /></div>
-          <div><img src="./Images/Brand04.jpg" /></div>
-          <div><img src="./Images/Brand05.jpg" /></div>
+          <div><img src="./Images/Brand01.jpg" alt="Brand" /></div>
+          <div><img src="./Images/Brand02.jpg" alt="Brand" /></div>
+          <div><img src="./Images/Brand03.jpg" alt="Brand" /></div>
+          <div><img src="./Images/Brand04.jpg" alt="Brand" /></div>
+          <div><img src="./Images/Brand05.jpg" alt="Brand" /></div>
         </div>
         <div class="heading">
           <h4>New Arrivals</h4>
@@ -470,7 +470,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New01.jpg" />
+            <img src="./Images/New01.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -499,7 +499,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New02.jpg" />
+            <img src="./Images/New02.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -528,7 +528,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New03.jpg" />
+            <img src="./Images/New03.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -557,7 +557,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New04.jpg" />
+            <img src="./Images/New04.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -586,7 +586,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New05.jpg" />
+            <img src="./Images/New05.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -615,7 +615,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New06.jpg" />
+            <img src="./Images/New06.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -644,7 +644,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New07.jpg" />
+            <img src="./Images/New07.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -673,7 +673,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New08.jpg" />
+            <img src="./Images/New08.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -702,7 +702,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New09.jpg" />
+            <img src="./Images/New09.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -731,7 +731,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New10.jpg" />
+            <img src="./Images/New10.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -760,7 +760,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New11.jpg" />
+            <img src="./Images/New11.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -789,7 +789,7 @@
               font-family: Poppins;
             "
           >
-            <img src="./Images/New12.jpg" />
+            <img src="./Images/New12.jpg" alt="New-arrivals" />
             <a
               href="#"
               style="
@@ -845,12 +845,7 @@
             <div class="featured-product">
               <h5>Featured Products</h5>
               <div class="product1">
-                <img
-                  src="./Images/product-01.jpg"
-                  width="95"
-                  height="auto"
-                  alt="product"
-                />
+                <img src="./Images/product-01.jpg" width="95" alt="product" />
                 <p>
                   <a href="#">Women Black Top</a>
                   <span class="rating">
@@ -864,12 +859,7 @@
                 </p>
               </div>
               <div class="product2">
-                <img
-                  src="./Images/product-02.jpg"
-                  width="95"
-                  height="auto"
-                  alt="product"
-                />
+                <img src="./Images/product-02.jpg" width="95" alt="product" />
                 <p>
                   <a href="#">Women Black Top</a>
                   <span class="rating">
