--- a/productList.html
+++ b/productList.html
@@ -32,7 +32,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-
     <!--Fontawesome icons plugin-->
     <link
       rel="stylesheet"
@@ -203,17 +202,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart01">
+              <button class="btn cart01">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart01">
+              <button class="btn cart01">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
@@ -234,17 +233,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart02">
+              <button class="btn cart02">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart02">
+              <button class="btn cart02">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
@@ -265,17 +264,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart03">
+              <button class="btn cart03">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart03">
+              <button class="btn cart03">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
@@ -296,17 +295,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart04">
+              <button class="btn cart04">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart04">
+              <button class="btn cart04">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
@@ -327,17 +326,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart05">
+              <button class="btn cart05">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart05">
+              <button class="btn cart05">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
@@ -358,17 +357,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart06">
+              <button class="btn cart06">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart06">
+              <button class="btn cart06">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
@@ -389,17 +388,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart07">
+              <button class="btn cart07">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart07">
+              <button class="btn cart07">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
@@ -420,17 +419,17 @@
                 <i class="fa fa-star" style="font-size: x-small"></i>
                 <i class="fa fa-star" style="font-size: x-small"></i>
               </span>
-              <span id="price">$90.00</span>
+              <span class="price">$90.00</span>
             </p>
             <div class="group-btn">
-              <button class="btn" id="cart08">
+              <button class="btn cart08">
                 <i class="far fa-heart"></i>
               </button>
               <button id="btn" class="btn">
                 <i class="fa fa-shopping-bag" style="font-size: small"></i>Add
                 to Cart
               </button>
-              <button class="btn" id="cart08">
+              <button class="btn cart08">
                 <i class="fas fa-signal"></i>
               </button>
             </div>
