--- a/productPage.html
+++ b/productPage.html
@@ -15,14 +15,10 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-      crossorigin="anonymous"
     />
 
     <!--Carousel Plugin-->
@@ -111,7 +107,12 @@
       <div class="Product container">
         <div class="product-details">
           <div class="product-zoom">
-            <span class='zoom' id='ex1'> <img src='./Images/Product-1.jpg' id='jack'alt='Daisy on the Ohoopee'/>
+            <span class="zoom" id="ex1">
+              <img
+                src="./Images/Product-1.jpg"
+                id="jack"
+                alt="Daisy on the Ohoopee"
+            /></span>
           </div>
           <div class="product-spec">
             <div class="product-title">
@@ -119,10 +120,20 @@
               <div>
                 <a href="#"
                   ><i class="fas fa-angle-left" style="font-size: 24px"></i
-                ><span class="tooltiptext"><img src="./Images/handbag01.jpg" width="70px" height="auto" /></span></a>
+                  ><span class="tooltiptext"
+                    ><img
+                      src="./Images/handbag01.jpg"
+                      width="70px"
+                      height="auto" /></span
+                ></a>
                 <a href="#"
                   ><i class="fas fa-angle-right" style="font-size: 24px"></i
-                ><span class="tooltiptext"><img src="./Images/handbag02.jpg" width="70px" height="auto" /></span></a>
+                  ><span class="tooltiptext"
+                    ><img
+                      src="./Images/handbag02.jpg"
+                      width="70px"
+                      height="auto" /></span
+                ></a>
               </div>
             </div>
             <div class="rating">
@@ -442,7 +453,7 @@
       charset="utf-8"
     ></script>
     <script>
-       $(document).ready(function () {
+      $(document).ready(function () {
         $("#ex1").zoom();
       });
     </script>
